wptest/proto/wordpress.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-dp
  labels:
    app: wp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wp
  template:
    metadata:
      labels:
        app: wp
    spec:
      containers:
      - name: wordpress
        image: wordpress
        resources:
          requests:
            cpu: "5m"
            memory: "10M"
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
          - mountPath: /var/www/html
            name: wp-content
      volumes:
      - name: wp-content
        persistentVolumeClaim:
          claimName: wp-pvc        
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: wpsvc
spec:
  type: LoadBalancer
  selector:
    app: wp
  ports:
  - port: 80
    targetPort: 80
