wptest/proto/wordpressingress.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: spspace
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-dp
  namespace: spspace
  labels:
    app: wp  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wp
  template:
    metadata:
      labels:
        app: wp
    spec:
      containers:
      - name: wordpress
        image: wordpress
        resources:
          requests:
            cpu: "5m"
            memory: "10M"
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
          - mountPath: /var/www/html
            name: wp-content
      volumes:
      - name: wp-content
        persistentVolumeClaim:
          claimName: wp-pvc        
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: wpsvc
  namespace: spspace
spec:
  type: NodePort
  selector:
    app: wp
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
# Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wp-ing
  namespace: spspace
  annotations:
    kubernetes.io/ingress.class: alb
    #alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: wpsvc
              servicePort: 80
